// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create a queue 1`] = `
{
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/WingLogger",
        "props": {},
        "type": "wingsdk.cloud.Logger",
      },
      {
        "attrs": {},
        "path": "root/my_queue",
        "props": {
          "initialMessages": [],
          "subscribers": [],
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "WingLogger": {
          "attributes": {
            "wing:resource:connections": [],
            "wing:resource:stateful": true,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_queue": {
          "attributes": {
            "wing:resource:connections": [],
            "wing:resource:stateful": true,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A distributed message queue",
            "title": "Queue",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`messages are requeued if the function fails 1`] = `
[
  "wingsdk.cloud.Logger created.",
  "wingsdk.cloud.Function created.",
  "wingsdk.cloud.Queue created.",
  "Push (message=BAD MESSAGE).",
  "Sending messages (messages=[\\"BAD MESSAGE\\"], subscriber=sim-1).",
  "Invoke (payload=\\"{\\\\\\"messages\\\\\\":[\\\\\\"BAD MESSAGE\\\\\\"]}\\").",
  "Subscriber error - returning 1 messages to queue: ERROR",
  "Sending messages (messages=[\\"BAD MESSAGE\\"], subscriber=sim-1).",
  "Invoke (payload=\\"{\\\\\\"messages\\\\\\":[\\\\\\"BAD MESSAGE\\\\\\"]}\\").",
  "Subscriber error - returning 1 messages to queue: ERROR",
  "Sending messages (messages=[\\"BAD MESSAGE\\"], subscriber=sim-1).",
  "Invoke (payload=\\"{\\\\\\"messages\\\\\\":[\\\\\\"BAD MESSAGE\\\\\\"]}\\").",
  "Subscriber error - returning 1 messages to queue: ERROR",
  "wingsdk.cloud.Queue deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.Logger deleted.",
]
`;

exports[`messages are requeued if the function fails 2`] = `
{
  ".wing/my_queue-onmessage-e645076f_c89a8f49.js": "const $logger = (function(env) {
        let handle = process.env[env];
        if (!handle) {
          throw new Error(\\"Missing environment variable: \\" + env);
        }
        return $simulator.findInstance(handle);
      })(\\"LOGGER_HANDLE_76f7e65b\\");
console.log = (...args) => $logger.log(...args);
exports.handler = async function(event) {
  return await (new (require(\\"[REDACTED]/wingsdk/src/target-sim/queue.onmessage.inflight.js\\")).QueueOnMessageHandlerClient({ handler: new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  
async handle(message) {
    if (message === \\"BAD MESSAGE\\") {
        throw new Error(\\"ERROR\\");
    }
}
};
})())({

}) })).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/WingLogger",
        "props": {},
        "type": "wingsdk.cloud.Logger",
      },
      {
        "attrs": {},
        "path": "root/my_queue-OnMessage-e645076f",
        "props": {
          "environmentVariables": {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": ".wing/my_queue-onmessage-e645076f_c89a8f49.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_queue",
        "props": {
          "initialMessages": [],
          "subscribers": [
            {
              "batchSize": 1,
              "functionHandle": "\${root/my_queue-OnMessage-e645076f#attrs.handle}",
            },
          ],
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "inbound",
                "implicit": false,
                "relationship": "handle",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": false,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "WingLogger": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "inbound",
                "implicit": true,
                "relationship": "log",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_queue": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_message",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A distributed message queue",
            "title": "Queue",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
        "my_queue-OnMessage-e645076f": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "handle",
                "resource": "root/Handler",
              },
              {
                "direction": "outbound",
                "implicit": true,
                "relationship": "log",
                "resource": "root/WingLogger",
              },
              {
                "direction": "inbound",
                "implicit": false,
                "relationship": "on_message",
                "resource": "root/my_queue",
              },
            ],
            "wing:resource:stateful": false,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_queue-OnMessage-e645076f",
          "path": "root/my_queue-OnMessage-e645076f",
        },
        "my_queue-OnMessageHandler-e645076f": {
          "attributes": {
            "wing:resource:connections": [],
            "wing:resource:stateful": false,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "hidden": true,
          },
          "id": "my_queue-OnMessageHandler-e645076f",
          "path": "root/my_queue-OnMessageHandler-e645076f",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`queue batch size of 2, purge the queue 1`] = `
[
  "wingsdk.cloud.Logger created.",
  "wingsdk.cloud.Queue created.",
  "Push (message=A).",
  "Push (message=B).",
  "ApproxSize ().",
  "Purge ().",
  "ApproxSize ().",
  "wingsdk.cloud.Queue deleted.",
  "wingsdk.cloud.Logger deleted.",
]
`;

exports[`queue batch size of 2, purge the queue 2`] = `
{
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/WingLogger",
        "props": {},
        "type": "wingsdk.cloud.Logger",
      },
      {
        "attrs": {},
        "path": "root/my_queue",
        "props": {
          "initialMessages": [],
          "subscribers": [],
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "WingLogger": {
          "attributes": {
            "wing:resource:connections": [],
            "wing:resource:stateful": true,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_queue": {
          "attributes": {
            "wing:resource:connections": [],
            "wing:resource:stateful": true,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A distributed message queue",
            "title": "Queue",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`queue with one subscriber, batch size of 5 1`] = `
[
  "wingsdk.cloud.Logger created.",
  "wingsdk.cloud.Function created.",
  "wingsdk.cloud.Queue created.",
  "Sending messages (messages=[\\"A\\",\\"B\\",\\"C\\",\\"D\\",\\"E\\"], subscriber=sim-1).",
  "Sending messages (messages=[\\"F\\"], subscriber=sim-1).",
  "Invoke (payload=\\"{\\\\\\"messages\\\\\\":[\\\\\\"F\\\\\\"]}\\").",
  "Invoke (payload=\\"{\\\\\\"messages\\\\\\":[\\\\\\"A\\\\\\",\\\\\\"B\\\\\\",\\\\\\"C\\\\\\",\\\\\\"D\\\\\\",\\\\\\"E\\\\\\"]}\\").",
  "wingsdk.cloud.Queue deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.Logger deleted.",
]
`;

exports[`queue with one subscriber, batch size of 5 2`] = `
{
  ".wing/my_queue-onmessage-e645076f_c89a8f49.js": "const $logger = (function(env) {
        let handle = process.env[env];
        if (!handle) {
          throw new Error(\\"Missing environment variable: \\" + env);
        }
        return $simulator.findInstance(handle);
      })(\\"LOGGER_HANDLE_76f7e65b\\");
console.log = (...args) => $logger.log(...args);
exports.handler = async function(event) {
  return await (new (require(\\"[REDACTED]/wingsdk/src/target-sim/queue.onmessage.inflight.js\\")).QueueOnMessageHandlerClient({ handler: new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  
async handle(message) {
    if (message === \\"BAD MESSAGE\\") {
        throw new Error(\\"ERROR\\");
    }
}
};
})())({

}) })).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/WingLogger",
        "props": {},
        "type": "wingsdk.cloud.Logger",
      },
      {
        "attrs": {},
        "path": "root/my_queue-OnMessage-e645076f",
        "props": {
          "environmentVariables": {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": ".wing/my_queue-onmessage-e645076f_c89a8f49.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_queue",
        "props": {
          "initialMessages": [
            "A",
            "B",
            "C",
            "D",
            "E",
            "F",
          ],
          "subscribers": [
            {
              "batchSize": 5,
              "functionHandle": "\${root/my_queue-OnMessage-e645076f#attrs.handle}",
            },
          ],
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "inbound",
                "implicit": false,
                "relationship": "handle",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": false,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "WingLogger": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "inbound",
                "implicit": true,
                "relationship": "log",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_queue": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_message",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A distributed message queue",
            "title": "Queue",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
        "my_queue-OnMessage-e645076f": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "handle",
                "resource": "root/Handler",
              },
              {
                "direction": "outbound",
                "implicit": true,
                "relationship": "log",
                "resource": "root/WingLogger",
              },
              {
                "direction": "inbound",
                "implicit": false,
                "relationship": "on_message",
                "resource": "root/my_queue",
              },
            ],
            "wing:resource:stateful": false,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_queue-OnMessage-e645076f",
          "path": "root/my_queue-OnMessage-e645076f",
        },
        "my_queue-OnMessageHandler-e645076f": {
          "attributes": {
            "wing:resource:connections": [],
            "wing:resource:stateful": false,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "hidden": true,
          },
          "id": "my_queue-OnMessageHandler-e645076f",
          "path": "root/my_queue-OnMessageHandler-e645076f",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`queue with one subscriber, default batch size of 1 1`] = `
[
  "wingsdk.cloud.Logger created.",
  "wingsdk.cloud.Function created.",
  "wingsdk.cloud.Queue created.",
  "Push (message=A).",
  "Push (message=B).",
  "Sending messages (messages=[\\"A\\"], subscriber=sim-1).",
  "Sending messages (messages=[\\"B\\"], subscriber=sim-1).",
  "Invoke (payload=\\"{\\\\\\"messages\\\\\\":[\\\\\\"A\\\\\\"]}\\").",
  "Invoke (payload=\\"{\\\\\\"messages\\\\\\":[\\\\\\"B\\\\\\"]}\\").",
  "wingsdk.cloud.Queue deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.Logger deleted.",
]
`;

exports[`queue with one subscriber, default batch size of 1 2`] = `
{
  ".wing/my_queue-onmessage-e645076f_c89a8f49.js": "const $logger = (function(env) {
        let handle = process.env[env];
        if (!handle) {
          throw new Error(\\"Missing environment variable: \\" + env);
        }
        return $simulator.findInstance(handle);
      })(\\"LOGGER_HANDLE_76f7e65b\\");
console.log = (...args) => $logger.log(...args);
exports.handler = async function(event) {
  return await (new (require(\\"[REDACTED]/wingsdk/src/target-sim/queue.onmessage.inflight.js\\")).QueueOnMessageHandlerClient({ handler: new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  
async handle(message) {
    if (message === \\"BAD MESSAGE\\") {
        throw new Error(\\"ERROR\\");
    }
}
};
})())({

}) })).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/WingLogger",
        "props": {},
        "type": "wingsdk.cloud.Logger",
      },
      {
        "attrs": {},
        "path": "root/my_queue-OnMessage-e645076f",
        "props": {
          "environmentVariables": {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": ".wing/my_queue-onmessage-e645076f_c89a8f49.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_queue",
        "props": {
          "initialMessages": [],
          "subscribers": [
            {
              "batchSize": 1,
              "functionHandle": "\${root/my_queue-OnMessage-e645076f#attrs.handle}",
            },
          ],
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "inbound",
                "implicit": false,
                "relationship": "handle",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": false,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "WingLogger": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "inbound",
                "implicit": true,
                "relationship": "log",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_queue": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_message",
                "resource": "root/my_queue-OnMessage-e645076f",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A distributed message queue",
            "title": "Queue",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
        "my_queue-OnMessage-e645076f": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "handle",
                "resource": "root/Handler",
              },
              {
                "direction": "outbound",
                "implicit": true,
                "relationship": "log",
                "resource": "root/WingLogger",
              },
              {
                "direction": "inbound",
                "implicit": false,
                "relationship": "on_message",
                "resource": "root/my_queue",
              },
            ],
            "wing:resource:stateful": false,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_queue-OnMessage-e645076f",
          "path": "root/my_queue-OnMessage-e645076f",
        },
        "my_queue-OnMessageHandler-e645076f": {
          "attributes": {
            "wing:resource:connections": [],
            "wing:resource:stateful": false,
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "hidden": true,
          },
          "id": "my_queue-OnMessageHandler-e645076f",
          "path": "root/my_queue-OnMessageHandler-e645076f",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;
